--- a/notebooks/loadFromServer.ipynb
+++ b/notebooks/loadFromServer.ipynb
@@ -19,6 +19,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "641e399d-0353-479b-9864-626a3eaa2c37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: polars in /Users/liambrannigan/playModels/programming-fundamentals-demo/demo-env/lib/python3.9/site-packages (0.13.5)\n",
+      "Requirement already satisfied: typing_extensions>=4.0.0 in /Users/liambrannigan/playModels/programming-fundamentals-demo/demo-env/lib/python3.9/site-packages (from polars) (4.1.1)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in /Users/liambrannigan/playModels/programming-fundamentals-demo/demo-env/lib/python3.9/site-packages (from polars) (1.21.5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install polars\n",
+    "!pip install pyinstrument"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "id": "9afe6554-7fb3-4911-a416-098002577c56",
    "metadata": {},
