--- a/notebooks/TestingNB.ipynb
+++ b/notebooks/TestingNB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "3f6840f5-77e3-465e-ace1-16bca1dc9a22",
    "metadata": {},
    "outputs": [],
@@ -12,27 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "bc8b74d7-9795-4c8f-b097-752a58fddccc",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ipytest'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mipytest\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipytest'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
-    "import ipytest"
+    "import ipytest\n",
+    "ipytest.autoconfig()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e13b0355-d433-4ab7-a849-5883913e88a8",
+   "metadata": {},
+   "source": [
+    "# Specify paths with built-in `pathlib` library"
    ]
   },
   {
@@ -44,6 +41,14 @@
    "source": [
     "dataPath = Path('../data')\n",
     "rawDataPath = dataPath / 'raw'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97d557ce-493c-4767-b833-f2663d3fd04d",
+   "metadata": {},
+   "source": [
+    "## Check if the directory exists"
    ]
   },
   {
@@ -65,6 +70,68 @@
    ],
    "source": [
     "rawDataPath.exists()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e86904d-ec25-4dc3-aed7-4793f2a6f73a",
+   "metadata": {},
+   "source": [
+    "### Get a list of CSVs in that directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "45148fdc-6988-4cb4-befe-c442385f4a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('../data/raw/atlanticInterpolated.csv'),\n",
+       " PosixPath('../data/raw/large.csv'),\n",
+       " PosixPath('../data/raw/atlanticInterpolatedtest.csv')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(rawDataPath.glob('*.csv'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38b70b1e-a5da-4a47-bbbf-6381cf0fc53f",
+   "metadata": {},
+   "source": [
+    "# f-strings - an easier way to add your variables into strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5a423b2c-3667-4499-af20-4da19bed07d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'current year is 2022'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year = 2022\n",
+    "currentYear = f\"current year is {year}\"\n",
+    "currentYear"
    ]
   },
   {
@@ -393,12 +460,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cf33a61-6b4a-40b2-a557-b9b25bddb34f",
+   "metadata": {},
+   "source": [
+    "## Responding to a test failure 1: Add an error message to the assert statement"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "485e856b-6b47-4720-ab3e-8b2f82717c10",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "<class 'pandas.core.series.Series'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# ASSERT\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(dfAverage,pd\u001b[38;5;241m.\u001b[39mDataFrame),\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(dfAverage)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 12\u001b[0m test_getAverageTemperature()\n",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36mtest_getAverageTemperature\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m dfAverage \u001b[38;5;241m=\u001b[39m getAverageTemperature(df\u001b[38;5;241m=\u001b[39mdf)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# ASSERT\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(dfAverage,pd\u001b[38;5;241m.\u001b[39mDataFrame),\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(dfAverage)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: <class 'pandas.core.series.Series'>"
+     ]
+    }
+   ],
+   "source": [
+    "def test_getAverageTemperature():\n",
+    "    # ARRANGE\n",
+    "    # load the data\n",
+    "    df = loadData()\n",
+    "    # select the first two columns\n",
+    "    df = df.iloc[:,:2]\n",
+    "    # ACT\n",
+    "    dfAverage = getAverageTemperature(df=df)\n",
+    "    # ASSERT\n",
+    "    assert isinstance(dfAverage,pd.DataFrame),f\"{type(dfAverage)}\"\n",
+    "\n",
+    "test_getAverageTemperature()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36ea3d7d-5f4d-4278-882e-aaee7ec5d2b2",
+   "metadata": {},
+   "source": [
+    "## Responding to a test failure 2: Use the debugger\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bacd2a87-d181-4aac-8169-15d90691d0e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "<class 'pandas.core.series.Series'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m test_getAverageTemperature()\n",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36mtest_getAverageTemperature\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m dfAverage \u001b[38;5;241m=\u001b[39m getAverageTemperature(df\u001b[38;5;241m=\u001b[39mdf)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# ASSERT\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(dfAverage,pd\u001b[38;5;241m.\u001b[39mDataFrame),\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(dfAverage)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: <class 'pandas.core.series.Series'>"
+     ]
+    }
+   ],
+   "source": [
+    "test_getAverageTemperature()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e1a1807-cb85-4c03-86c4-bd7afe50fba0",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%debug"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ed8dd1e-a546-4e62-b0c4-6ca798ae9cee",
+   "metadata": {},
+   "source": [
+    "# Automated tests with pytest\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "09911aec-5ad2-4858-82ef-647f7c54a32b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%ipytest` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%ipytest -qq\n",
+    "\n",
+    "def test_getAverageTemperature():\n",
+    "    # ARRANGE\n",
+    "    # load the data\n",
+    "    df = loadData()\n",
+    "    # select the first two columns\n",
+    "    df = df.iloc[:,:2]\n",
+    "    # ACT\n",
+    "    dfAverage = getAverageTemperature(df=df)\n",
+    "    # ASSERT\n",
+    "    assert isinstance(dfAverage,pd.DataFrame),f\"{type(dfAverage)}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc3ce03c-602f-4306-ab19-aac400e1a689",
+   "metadata": {},
+   "source": [
+    "## Use the debugger with pytest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53f4af1b-037b-47d8-8766-f9fc30c77642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%ipytest -qq --pdb\n",
+    "\n",
+    "def test_getAverageTemperature():\n",
+    "    # ARRANGE\n",
+    "    # load the data\n",
+    "    df = loadData()\n",
+    "    # select the first two columns\n",
+    "    df = df.iloc[:,:2]\n",
+    "    # ACT\n",
+    "    dfAverage = getAverageTemperature(df=df)\n",
+    "    # ASSERT\n",
+    "    assert isinstance(dfAverage,pd.DataFrame),f\"{type(dfAverage)}\""
+   ]
   }
  ],
  "metadata": {
